feat(export): add and update the exported pdfs

--- a/listings-setup.tex
+++ b/listings-setup.tex
@@ -1,4 +1,4 @@
-% Contents of listings-setup.tex
+\usepackage{listings}
 \usepackage{xcolor}
 
 \lstset{
@@ -10,7 +10,6 @@
     tabsize=2,
     captionpos=b,
     breaklines=true,
-    breakatwhitespace=true,
     breakautoindent=true,
     linewidth=\textwidth
 }
